--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="container-fluid justify-content-around">
                 <a class="navbar-brand"><i class="fa-brands fa-shopify"></i><b class="brand_prop">Shopify</b>
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="navbar-collapse" aria-controls="navbarSupportedContent"
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
